--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .main {
-  height: 5300px;
+  height: 6300px;
   margin: 0 auto;
 }
 
@@ -285,3 +285,21 @@ img {
   margin: 0 auto;
   width:50%;
 }
+
+.submitProject {
+  height: 900px;
+  font-family: 'Josefin Sans', sans-serif;
+  background-color: #15619a;
+  color: $txtcolor;
+}
+  .projectInfo {
+    border: 1px solid #CB2027;
+    margin: 60px auto;
+    width:50%;
+  }
+  input {
+    color: #000;
+  }
+  label {
+    padding: 6px;;
+  }
