--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -30,8 +30,6 @@ body {
   background-color: rgba(15, 69, 109, 0.86);
   text-align: center;
   height: 1000px;
-  margin-top: 59px;
-  margin-bottom: -20px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -106,7 +104,7 @@ body {
     text-align: left;
   }
   .arrow {
-    height:60px;
+    height: 60px;
     width: 100px;
     margin-left: 820px;
     margin-top: -900px;
@@ -120,9 +118,11 @@ body {
   background-color: #15619a;
   color: $txtcolor;
 }
+
 h1 {
   font-size: 46px;
 }
+
 h4 {
   padding-top: 25px;
   padding-left: 100px;
@@ -130,25 +130,20 @@ h4 {
   font-size: 32px;
   color: $txtcolor;
 }
+
 h5 {
   text-align: center;
   font-size: 20px;
   color: $txtcolor;
 }
+
 strong {
   color: $bkgndcolorlight;
 }
-p{
+
+p {
   text-align: center;
   font-size: 44px;
-}
-
-.firstSet {
-  padding-left: 300px;
-}
-
-.secondSet {
-  padding-right: 300px;
 }
 
 .skill-list {
@@ -158,8 +153,8 @@ p{
 
 .hrSkill {
   margin: auto;
-  width:90%;
-  border : 0;
+  width: 90%;
+  border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
@@ -177,8 +172,8 @@ p{
 }
 
 .contact {
-  margin:0 auto;
-  width:100%;
+  margin: 0 auto;
+  width: 100%;
   height: 1000px;
   background-color: #30404c;
 }
@@ -190,7 +185,7 @@ p{
   h1 {
     text-align: center;
     margin: 0 auto;
-    width:70%;
+    width: 70%;
     color: $txtcolor;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 62px;
@@ -220,7 +215,7 @@ li.navContact a:hover {
   color: #061a2a !important;
 }
 
-.logo, .navAbout, .navSkills, .navPortfolio, .navContact, .navLinks {
+.logo, .navAbout, .navSkills, .navPortfolio, .navContact, .navLinks, .navLogin {
   cursor: pointer;
 }
 
@@ -234,7 +229,7 @@ li.navContact a:hover {
 hr.faded {
   height: 2px;
   border: 0;
-  width:25%;
+  width: 25%;
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
 
@@ -265,41 +260,43 @@ img:hover {
 .skill {
   width: 50%;
   font-size: 30px;
-.skill-names {
-  text-align: left;
-}
+  .skill-names {
+    text-align: left;
+  }
   .skill-stars {
     text-align: left;
   }
-img {
-  width: 12%;
-  margin: 0 6px;
-}
+  img {
+    width: 12%;
+    margin: 0 6px;
+  }
 }
 
 .social-icons {
-  margin:0 auto;
+  margin: 0 auto;
 }
 
 .contactkbc {
   margin: 0 auto;
-  width:50%;
+  width: 50%;
 }
 
 .submitProject {
+  border: 1px solid #CB2027;
   height: 900px;
+  margin: 0 auto;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #15619a;
   color: $txtcolor;
-}
   .projectInfo {
     border: 1px solid #CB2027;
-    margin: 60px auto;
-    width:50%;
+    margin: 0 auto;
+    width: 50%;
+    input {
+      color: #000;
+    }
+    label {
+      padding: 6px;;
+    }
   }
-  input {
-    color: #000;
-  }
-  label {
-    padding: 6px;;
-  }
+}
