--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -4,21 +4,45 @@ body {
 
 .main {
   height: 6300px;
-  margin: 0 auto; }
+  margin: 0; }
 
 .navbar {
-  display: block;
+  position: fixed;
+  top: 0;
   background-color: rgba(15, 69, 109, 0.97);
-  height: 5rem;
+  height: 120px;
+  line-height: 120px;
+  -webkit-transition: height .5s, line-height .5s;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
-  padding-bottom: 58px; }
+  font-weight: bold;
+  color: #e2f0fb; }
+  .navbar ul {
+    list-style: none;
+    margin-top: 64px;
+    margin-right: 24px;
+    -webkit-transition: all .5s;
+    transition: all .5s; }
   .navbar .kbc-logo {
-    margin-top: 12px;
-    width: 100px; }
+    display: inline-block;
+    margin-top: 15px;
+    margin-left: 20px;
+    height: 50px;
+    -webkit-transition: all .6s;
+    transition: all .6s; }
 
-.nav {
-  margin: 10px; }
+@media only screen and (min-width: 320px) {
+  .navbar-collapse {
+    margin-top: -51px;
+    background-color: rgba(15, 69, 109, 0.97); } }
+
+@media only screen and (min-width: 320px) {
+  .navbar-collapse {
+    margin-top: -300px; } }
+
+@media only screen and (min-width: 1024px) {
+  .navbar-collapse {
+    margin-top: -300px; } }
 
 .introduction {
   background-color: rgba(15, 69, 109, 0.86);
@@ -31,10 +55,26 @@ body {
   box-sizing: border-box;
   display: inline-block;
   text-align: center;
-  margin-top: 100px;
-  font-size: 6em;
+  margin-top: 200px;
+  font-size: 72px;
   font-family: 'Josefin Sans', sans-serif;
   color: #e2f0fb; }
+  @media only screen and (min-width: 320px) {
+    .intro-text {
+      color: #e2f0fb;
+      font-size: 28px; } }
+  @media only screen and (min-width: 480px) {
+    .intro-text {
+      color: #e2f0fb;
+      font-size: 54px; } }
+  @media only screen and (min-width: 768px) {
+    .intro-text {
+      color: #e2f0fb;
+      font-size: 54px; } }
+  @media only screen and (min-width: 1024px) {
+    .intro-text {
+      color: #e2f0fb;
+      font-size: 72px; } }
 
 .kbcHeading {
   margin-top: 10px;
@@ -44,6 +84,18 @@ body {
     font-size: 28px;
     font-family: 'Josefin Sans', sans-serif;
     color: #061928; }
+    @media only screen and (min-width: 320px) {
+      .kbcHeading p {
+        font-size: 16px; } }
+    @media only screen and (min-width: 480px) {
+      .kbcHeading p {
+        font-size: 18px; } }
+    @media only screen and (min-width: 768px) {
+      .kbcHeading p {
+        font-size: 28px; } }
+    @media only screen and (min-width: 1024px) {
+      .kbcHeading p {
+        font-size: 28px; } }
 
 .kbcHeading2 {
   margin-top: 20px;
@@ -52,28 +104,78 @@ body {
   .kbcHeading2 strong {
     font-family: 'Oxygen', sans-serif;
     color: #e2f0fb; }
+  @media only screen and (min-width: 320px) {
+    .kbcHeading2 {
+      font-size: 12px; } }
+  @media only screen and (min-width: 480px) {
+    .kbcHeading2 {
+      font-size: 18px; } }
+  @media only screen and (min-width: 768px) {
+    .kbcHeading2 {
+      font-size: 28px; } }
+  @media only screen and (min-width: 1024px) {
+    .kbcHeading2 {
+      font-size: 28px; } }
 
 .aboutMe {
+  border: 1px solid #CB2027;
   font-family: 'Oxygen', sans-serif;
   height: 1800px;
   margin-bottom: -20px;
   background-color: #0f6d37; }
-  .aboutMe h1 {
+  .aboutMe .masthead {
     height: 600px;
-    background-image: url("../images/kbc-fam-selfie.png");
+    width: 100%;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 10% 10%;
-    padding-top: 128px;
-    text-align: center;
-    font-size: 68px;
-    color: #e2f0fb; }
+    background-image: url("../images/kbc-fam-selfie-1024.png"); }
+    @media only screen and (min-width: 320px) {
+      .aboutMe .masthead {
+        background-image: url("../images/kbc-fam-selfie-350.png");
+        background-size: 100%;
+        background-repeat: no-repeat; } }
+    @media only screen and (min-width: 480px) {
+      .aboutMe .masthead {
+        background-image: url("../images/kbc-fam-selfie-375.png");
+        background-size: 100%;
+        background-repeat: no-repeat; } }
+    @media only screen and (min-width: 640px) {
+      .aboutMe .masthead {
+        background-image: url("../images/kbc-fam-selfie-640.png");
+        background-size: 100%;
+        background-repeat: no-repeat; } }
+    @media only screen and (min-width: 768px) {
+      .aboutMe .masthead {
+        background-image: url("../images/kbc-fam-selfie-768.png");
+        font-size: 68px;
+        background-size: 100%;
+        background-repeat: no-repeat; } }
+    @media only screen and (min-width: 1024px) {
+      .aboutMe .masthead {
+        background-image: url("../images/kbc-fam-selfie-1024.png");
+        background-size: cover;
+        margin: 0;
+        background-repeat: no-repeat; } }
   .aboutMe h4 {
     padding-top: 25px;
     padding-left: 100px;
     padding-bottom: 24px;
     font-size: 32px;
     color: #e2f0fb; }
+    @media only screen and (min-width: 320px) {
+      .aboutMe h4 {
+        font-size: 9px; } }
+    @media only screen and (min-width: 480px) {
+      .aboutMe h4 {
+        font-size: 18px; } }
+    @media only screen and (min-width: 640px) {
+      .aboutMe h4 {
+        font-size: 26px; } }
+    @media only screen and (min-width: 768px) {
+      .aboutMe h4 {
+        font-size: 30px; } }
+    @media only screen and (min-width: 1024px) {
+      .aboutMe h4 {
+        font-size: 32px; } }
   .aboutMe h5 {
     text-align: center;
     font-size: 20px;
@@ -86,11 +188,6 @@ body {
     color: #061928;
     padding-left: 100px;
     text-align: left; }
-  .aboutMe .arrow {
-    height: 60px;
-    width: 100px;
-    margin-left: 820px;
-    margin-top: -900px; }
 
 .skills {
   height: 984px;
@@ -133,11 +230,8 @@ p {
   background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.75), transparent); }
 
 .portfolio {
-  height: 1500px;
-  display: inline-block;
-  margin-top: 25px;
+  margin-top: 10px;
   padding: 10px;
-  width: 25%;
   text-align: center; }
   .portfolio img {
     width: 100%; }
@@ -184,7 +278,12 @@ li.navContact a:hover {
   display: block;
   margin: 0 auto;
   height: 10%;
-  border-radius: 15px 50px; }
+  border-radius: 15px 50px;
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  padding: 18px; }
 
 hr.faded {
   height: 2px;
@@ -197,13 +296,6 @@ img:hover {
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out; }
-
-.contactIcons {
-  -webkit-filter: grayscale(100%);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  padding: 18px; }
 
 .contactkbc:hover {
   cursor: pointer; }
@@ -233,6 +325,7 @@ img:hover {
 .submitProject {
   height: 900px;
   margin: auto;
+  width: 100%;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #15619a;
   color: #e2f0fb; }
@@ -244,3 +337,19 @@ img:hover {
       color: #000; }
     .submitProject .projectInfo label {
       padding: 6px; }
+
+.portfolioItem {
+  background-color: #0275B6;
+  padding: 10px; }
+
+.scrolled-nav {
+  height: 40px !important;
+  line-height: 40px !important;
+  margin-top: 12px; }
+  .scrolled-nav .kbc-logo {
+    margin-top: 2px;
+    height: 30px; }
+  .scrolled-nav ul {
+    margin-top: 0px;
+    -webkit-transition: all .5s;
+    transition: all .5s; }
