--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -3,5 +3,142 @@ $bkgndcolorlight: #061928;
 $txtcolor: #e2f0fb;
 $footercolor: #18232E;
 
+@mixin kbcHeadingResize {
+  @include mq(iphone) {
+    font-size: 16px;
+  }
+  @include mq(smaller) {
+    font-size: 18px;
+  }
+  @include mq(small) {
+    font-size: 18px;
+  }
+  @include mq(ipad) {
+    font-size: 28px;
+  }
+  @include mq(large) {
+    font-size: 28px;
+  }
+}
+
+@mixin kbcHeading2Resize {
+  @include mq(iphone) {
+    font-size: 12px;
+  }
+  @include mq(smaller) {
+    font-size: 15px;
+  }
+  @include mq(small) {
+    font-size: 18px;
+  }
+  @include mq(ipad) {
+    font-size: 28px;
+  }
+  @include mq(large) {
+    font-size: 28px;
+  }
+}
+
+@mixin introTextResize {
+  @include mq(iphone) {
+    color: $txtcolor;
+    font-size: 28px;
+  }
+  @include mq(smaller) {
+    color: $txtcolor;
+    font-size: 28px;
+  }
+  @include mq(small) {
+    color: $txtcolor;
+    font-size: 54px;
+  }
+  @include mq(ipad) {
+    color: $txtcolor;
+    font-size: 54px;
+  }
+  @include mq(large) {
+    color: $txtcolor;
+    font-size: 72px;
+  }
+}
+
+@mixin aboutMeTextResize {
+  @include mq(iphone) {
+    font-size: 9px;
+  }
+  @include mq(smaller) {
+    font-size: 14px;
+  }
+  @include mq(small) {
+    font-size: 18px;
+  }
+  @include mq(medium) {
+    font-size: 26px;
+  }
+  @include mq(ipad) {
+    font-size: 30px;
+  }
+  @include mq(large) {
+    font-size: 32px;
+  }
+}
+
+@mixin mastHeadResize {
+  @include mq(iphone) {
+    background-image: url("../images/kbc-fam-selfie-350.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  @include mq(small) {
+    background-image: url("../images/kbc-fam-selfie-375.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  @include mq(medium) {
+    background-image: url("../images/kbc-fam-selfie-640.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  @include mq(ipad) {
+    background-image: url("../images/kbc-fam-selfie-768.png");
+    font-size: 68px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  @include mq(large) {
+    background-image: url("../images/kbc-fam-selfie-1024.png");
+    background-size: cover;
+    margin:0;
+    background-repeat: no-repeat;
+  }
+}
+
+
+
+@mixin lg-text {
+  font: {
+    family: 'Josefin Sans', sans-serif;
+    size: 20px;
+    weight: bold;
+  }
+  color: #e2f0fb;
+}
+
+@mixin med-text {
+  font: {
+    family: 'Josefin Sans', sans-serif;
+    size: 16px;
+    weight: bold;
+  }
+  color: #e2f0fb;
+}
+@mixin sm-text {
+  font: {
+    family: 'Josefin Sans', sans-serif;
+    size: 20px;
+    weight: bold;
+  }
+  color: #e2f0fb;
+}
 
 
