--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import "../node_modules/mq-sass/stylesheets/mq-sass";
 
 body {
   overflow-x: hidden;
@@ -6,24 +7,45 @@ body {
 
 .main {
   height: 6300px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 .navbar {
-  display: block;
+  position: fixed;
+  top:0;
   background-color: rgba(15, 69, 109, 0.97);
-  height: 5rem;
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 20px;
-  padding-bottom: 58px;
+  height: 120px;
+  line-height: 120px;
+  -webkit-transition: height .5s, line-height .5s;
+  @include lg-text;
+  ul {
+    list-style: none;
+    margin-top: 64px;
+    margin-right: 24px;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+  }
   .kbc-logo {
-    margin-top: 12px;
-    width: 100px;
+    display: inline-block;
+    margin-top: 15px;
+    margin-left: 20px;
+    height: 50px;
+    -webkit-transition: all .6s;
+    transition: all .6s;
   }
 }
 
-.nav {
-  margin: 10px;
+.navbar-collapse {
+  @include mq(iphone) {
+    margin-top: -51px;
+    background-color: rgba(15, 69, 109, 0.97);
+  }
+  @include mq(iphone) {
+    margin-top: -300px;
+  }
+  @include mq(large) {
+    margin-top: -300px;
+  }
 }
 
 .introduction {
@@ -38,10 +60,11 @@ body {
   box-sizing: border-box;
   display: inline-block;
   text-align: center;
-  margin-top: 100px;
-  font-size: 6em;
+  margin-top: 200px;
+  font-size: 72px;
   font-family: 'Josefin Sans', sans-serif;
   color: $txtcolor;
+  @include introTextResize();
 }
 
 .kbcHeading {
@@ -52,6 +75,7 @@ body {
     font-size: 28px;
     font-family: 'Josefin Sans', sans-serif;
     color: $bkgndcolorlight;
+    @include kbcHeadingResize();
   }
 }
 
@@ -63,23 +87,21 @@ body {
     font-family: 'Oxygen', sans-serif;
     color: $txtcolor;
   }
+  @include kbcHeading2Resize();
 }
 
 .aboutMe {
+  border:1px solid #CB2027;
   font-family: 'Oxygen', sans-serif;
   height: 1800px;
   margin-bottom: -20px;
   background-color: #0f6d37;
-  h1 {
+  .masthead {
     height: 600px;
-    background-image: url("../images/kbc-fam-selfie.png");
+    width: 100%;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 10% 10%;
-    padding-top: 128px;
-    text-align: center;
-    font-size: 68px;
-    color: $txtcolor;
+    background-image: url("../images/kbc-fam-selfie-1024.png");
+    @include mastHeadResize();
   }
   h4 {
     padding-top: 25px;
@@ -87,6 +109,7 @@ body {
     padding-bottom: 24px;
     font-size: 32px;
     color: $txtcolor;
+    @include aboutMeTextResize();
   }
   h5 {
     text-align: center;
@@ -102,12 +125,6 @@ body {
     color: $bkgndcolorlight;
     padding-left: 100px;
     text-align: left;
-  }
-  .arrow {
-    height: 60px;
-    width: 100px;
-    margin-left: 820px;
-    margin-top: -900px;
   }
 }
 
@@ -160,11 +177,8 @@ p {
 }
 
 .portfolio {
-  height: 1500px;
-  display: inline-block;
-  margin-top: 25px;
+  margin-top: 10px;
   padding: 10px;
-  width: 25%;
   text-align: center;
   img {
     width: 100%;
@@ -224,6 +238,11 @@ li.navContact a:hover {
   margin: 0 auto;
   height: 10%;
   border-radius: 15px 50px;
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  padding: 18px;
 }
 
 hr.faded {
@@ -238,14 +257,6 @@ img:hover {
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out;
-}
-
-.contactIcons {
-  -webkit-filter: grayscale(100%);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  padding: 18px;
 }
 
 .contactkbc:hover {
@@ -284,6 +295,7 @@ img:hover {
 .submitProject {
   height: 900px;
   margin:auto;
+  width:100%;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #15619a;
   color: $txtcolor;
@@ -297,5 +309,25 @@ img:hover {
     label {
       padding: 6px;;
     }
+  }
+}
+
+.portfolioItem {
+  background-color: #0275B6;
+  padding: 10px;
+}
+
+.scrolled-nav {
+  height: 40px !important;
+  line-height: 40px !important;
+  margin-top: 12px;
+  .kbc-logo {
+    margin-top: 2px;
+    height: 30px;
+  }
+  ul {
+    margin-top: 0px;
+    -webkit-transition: all .5s;
+    transition: all .5s;
   }
 }
