--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -11,7 +11,24 @@ $mq-breakpoints: (
         medium  : 640px,
         ipad    : 768px,
         large   : 1024px,
+        desktop : 1200px,
 );
+
+@mixin navCollapseTopMargin {
+  @include mq(iphone) {
+    margin-top: 4px!important;
+  }
+  @include mq(ipad) {
+    -webkit-transition: all 0.5s;
+    margin-top: 4px!important;
+  }
+  @include mq(medium) {
+    margin-top: 4px!important;
+  }
+  @include mq(large) {
+    margin-top: 4px!important;
+  }
+}
 
 @mixin kbcHeadingResize {
   @include mq(iphone) {
@@ -74,56 +91,67 @@ $mq-breakpoints: (
 
 @mixin aboutMeTextResize {
   @include mq(iphone) {
-    font-size: 9px;
-  }
-  @include mq(smaller) {
     font-size: 14px;
   }
+  @include mq(smaller) {
+    font-size: 16px;
+  }
   @include mq(small) {
-    font-size: 18px;
+    font-size: 16px;
   }
   @include mq(medium) {
-    font-size: 26px;
+    font-size: 18px;
   }
   @include mq(ipad) {
-    font-size: 30px;
+    font-size: 20px;
   }
   @include mq(large) {
-    font-size: 32px;
+    font-size: 24px;
   }
 }
 
 @mixin mastHeadResize {
   @include mq(iphone) {
+    margin-top: -14px;
+    height: 200px;
     background-image: url("../images/kbc-fam-selfie-350.png");
     background-size: 100%;
     background-repeat: no-repeat;
   }
   @include mq(small) {
+    height: 260px;
     background-image: url("../images/kbc-fam-selfie-375.png");
     background-size: 100%;
     background-repeat: no-repeat;
   }
   @include mq(medium) {
+    height: 350px;
     background-image: url("../images/kbc-fam-selfie-640.png");
     background-size: 100%;
     background-repeat: no-repeat;
   }
   @include mq(ipad) {
+    height: 450px;
     background-image: url("../images/kbc-fam-selfie-768.png");
     font-size: 68px;
     background-size: 100%;
     background-repeat: no-repeat;
   }
   @include mq(large) {
+    height: 575px;
+    background-image: url("../images/kbc-fam-selfie-1024.png");
+    background-size: cover;
+    margin:0;
+    background-repeat: no-repeat;
+  }
+  @include mq(desktop) {
+    height: 575px;
     background-image: url("../images/kbc-fam-selfie-1024.png");
     background-size: cover;
     margin:0;
     background-repeat: no-repeat;
   }
 }
-
-
 
 @mixin lg-text {
   font: {
@@ -145,7 +173,7 @@ $mq-breakpoints: (
 @mixin sm-text {
   font: {
     family: 'Josefin Sans', sans-serif;
-    size: 20px;
+    size: 12px;
     weight: bold;
   }
   color: #e2f0fb;
