--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,12 +15,19 @@ body {
 }
 
 .navbar-collapse {
- margin-top: -1px;
+  background-color: rgba(15, 69, 109, 1);
+  margin-top: -1px;
+  @include mq(iphone) {
+    margin-top: -1px;
+  }
+  @include mq(large) {
+    margin-top: -1px;
+  }
 }
 
 .navbar {
   position: fixed;
-  top:0;
+  top: 0;
   z-index: 100;
   background-color: rgba(15, 69, 109, 1);
   height: 120px;
@@ -33,7 +40,6 @@ body {
     margin-right: 24px;
     -webkit-transition: all .5s;
     transition: all .5s;
-
   }
   .kbc-logo {
     display: inline-block;
@@ -45,8 +51,12 @@ body {
   }
 }
 
+.navbar-nav {
+  @include navCollapseTopMargin();
+}
+
 .scrolled-nav {
-  margin-top: 0px;
+  margin-top: 0;
   height: 40px !important;
   line-height: 46px !important;
   .kbc-logo {
@@ -54,36 +64,23 @@ body {
     height: 30px;
   }
   ul {
-    margin-top: 0px;
+    //margin-top: 0;
     -webkit-transition: all .5s;
     transition: all .5s;
   }
   .navbar-collapse {
     margin-top: -1px;
+    width: 100%;
   }
   .navbar-toggle {
     margin-top: 8px;
   }
 }
 
-.navbar-collapse {
-  background-color: rgba(15, 69, 109, 1);
-  @include mq(iphone) {
-    margin-top: -1px;
-  }
-  @include mq(large) {
-    margin-top: -1px;
-  }
-}
-
-
-
 .introduction {
   background-color: rgba(15, 69, 109, 0.86);
   text-align: center;
   height: 1000px;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .intro-text {
@@ -121,20 +118,21 @@ body {
 }
 
 .aboutMe {
-  border:1px solid #CB2027;
   font-family: 'Oxygen', sans-serif;
-  height: 1800px;
+  height: 1700px;
+  margin-top: -10px;
   margin-bottom: -20px;
   background-color: #0f6d37;
+
   .masthead {
     height: 600px;
     width: 100%;
     background-size: cover;
-    background-image: url("../images/kbc-fam-selfie-1024.png");
+    background: url("../images/kbc-fam-selfie-1024.png");
     @include mastHeadResize();
   }
   h4 {
-    padding-top: 25px;
+    padding-top: 12px;
     padding-left: 100px;
     padding-bottom: 24px;
     font-size: 32px;
@@ -145,6 +143,7 @@ body {
     text-align: center;
     font-size: 20px;
     color: $txtcolor;
+    @include aboutMeTextResize();
   }
   strong {
     color: $bkgndcolorlight;
@@ -154,34 +153,89 @@ body {
     font-family: 'Josefin Sans', sans-serif;
     color: $bkgndcolorlight;
     padding-left: 100px;
+    padding-right: 50px;
     text-align: left;
+    @include aboutMeTextResize();
   }
+  .cabo {
+    display: block;
+    margin: 0 auto;
+    height: 200px;
+    border-radius: 15px 50px;
+    -webkit-filter: grayscale(100%);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    padding: 18px;
+    @include mq(iphone6) {
+      height: 100px;
+    }
+    @include mq(small) {
+      height: 125px;
+    }
+    @include mq(medium) {
+      height: 150px;
+    }
+    @include mq(large) {
+      height: 200px;
+    }
+  }
+  .cabo:hover {
+    -webkit-filter: grayscale(0%);
+  }
+
+}
+
+.skill-row {
+  margin: 100px auto;
+  width: 100%;
 }
 
 .skills {
   height: 984px;
   margin: auto;
+  width: 100%;
+  padding-top: 24px;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #15619a;
   color: $txtcolor;
-}
-
-h1 {
-  font-size: 46px;
-}
-
-h4 {
-  padding-top: 25px;
-  padding-left: 100px;
-  padding-bottom: 24px;
-  font-size: 32px;
-  color: $txtcolor;
-}
-
-h5 {
-  text-align: center;
-  font-size: 20px;
-  color: $txtcolor;
+  .skill {
+    width: 50%;
+    .skill-names {
+      float: left;
+      padding-left: 140px;
+      @include mq(iphone6) {
+        font-size: 12px;
+        padding-left: 10px;
+      }
+      @include mq(ipad) {
+        font-size: 20px;
+      }
+      @include mq(large) {
+        font-size: 26px;
+        padding-left: 140px;
+      }
+    }
+    .skill-stars {
+      float: right;
+      margin-top: -20px;
+      margin-right: 40px;
+      text-align: right;
+    }
+    img {
+      width: 22px;
+      margin: 0 4px;
+      @include mq(iphone6) {
+        width: 12px;
+      }
+      @include mq(ipad) {
+        width: 15px;
+      }
+      @include mq(large) {
+        width: 22px;
+      }
+    }
+  }
 }
 
 strong {
@@ -189,13 +243,7 @@ strong {
 }
 
 p {
-  text-align: center;
   font-size: 44px;
-}
-
-.skill-list {
-  padding-top: 20px;
-  font-size: 20px;
 }
 
 .hrSkill {
@@ -263,18 +311,6 @@ li.navContact a:hover {
   cursor: pointer;
 }
 
-.cabo {
-  display: block;
-  margin: 0 auto;
-  height: 10%;
-  border-radius: 15px 50px;
-  -webkit-filter: grayscale(100%);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  padding: 18px;
-}
-
 hr.faded {
   height: 2px;
   border: 0;
@@ -282,39 +318,16 @@ hr.faded {
   box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
 }
 
-img:hover {
+.contactIcons {
+  -webkit-filter: grayscale(100%);
+}
+
+.contactIcons:hover {
+  cursor: pointer;
   -webkit-filter: grayscale(0%);
   -webkit-transition: .5s ease-in-out;
   -moz-transition: .5s ease-in-out;
   -o-transition: .5s ease-in-out;
-}
-
-.contactkbc:hover {
-  cursor: pointer;
-}
-
-.skill-row {
-  margin: 100px auto;
-  width: 60%;
-}
-
-.skill {
-  width: 50%;
-  font-size: 30px;
-  .skill-names {
-    text-align: left;
-  }
-  .skill-stars {
-    text-align: left;
-  }
-  img {
-    width: 12%;
-    margin: 0 6px;
-  }
-}
-
-.social-icons {
-  margin: 0 auto;
 }
 
 .contactkbc {
@@ -324,8 +337,8 @@ img:hover {
 
 .submitProject {
   height: 900px;
-  margin:auto;
-  width:100%;
+  margin: auto;
+  width: 100%;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #15619a;
   color: $txtcolor;
@@ -346,4 +359,5 @@ img:hover {
   background-color: #0275B6;
   padding: 10px;
 }
+
 
